# c_test_coverage

./: CMakeLists.txt  RunTest.sh  coverage.cuadrados_source_Cuadrados.c.html  coverage.html  coverage.main.c.html  coverage.operaciones_source_operaciones.c.html  main.c
cuadrados/: CMakeLists.txt
cuadrados/include/: Cuadrados.h
cuadrados/source/: Cuadrados.c
operaciones/: CMakeLists.txt
operaciones/include/: operaciones.h
operaciones/source/: operaciones.c
